# pyqec

./: .gitignore  Cargo.toml  README.md  classical.html  genindex.html  make_docs.sh  objects.inv  pyproject.toml  requirements.txt  searchindex.js  sparse.html
.github/workflows/: publish_pypi.yml
docs/: index.html  pyqec.html
docs/book/: _config.yml
docs/book/.doctrees/content/classical/: first_simulation.doctree
docs/book/_build/.doctrees/: environment.pickle
docs/book/_build/.doctrees/content/: intro.doctree
docs/book/_build/.doctrees/content/classical/: basic.doctree  first_simulation.doctree  pratice.doctree  solution.doctree
docs/book/_build/html/: .buildinfo  genindex.html  search.html  searchindex.js
docs/book/_build/html/_sources/content/: intro.md
docs/book/_build/html/content/: intro.html
docs/book/_build/html/content/classical/: basic.html  first_simulation.html  pratice.html  solution.html
docs/book/_build/jupyter_execute/content/classical/: first_simulation.ipynb  solution.ipynb
docs/book_src/_build/.doctrees/: environment.pickle
docs/book_src/_build/.doctrees/content/: intro.doctree
docs/book_src/_build/.doctrees/content/classical/: solution.doctree
examples/: hamming_code.py
pyqec/: __init__.py  experiments.py
pyqec/experiments/: __init__.py  classical_decoding.py  css_decoding.py  laboratory.py  results.py
src/: flip_decoder.rs  lib.rs  linear_code.rs  noise.rs
src/sparse/: macros.rs  matrix.rs  mod.rs  vector.rs
tests/sparse/: test_vector.py
