[tool.poetry]
name = "pyqec"
version = "0.2.0"
description = "A toolbox for classical and quantum error correction"
authors = ["maxtremblay <matrem@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pdoc3 = "^0.9.2"
maturin = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
